
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uint32_t ;
struct TYPE_2__ {int CSR; } ;
typedef scalar_t__ FunctionalState ;


 TYPE_1__* COMP ;
 scalar_t__ DISABLE ;
 int IS_COMP_ALL_PERIPH (int) ;
 int IS_FUNCTIONAL_STATE (scalar_t__) ;
 int assert_param (int ) ;

void COMP_Cmd(uint32_t COMP_Selection, FunctionalState NewState)
{

  assert_param(IS_COMP_ALL_PERIPH(COMP_Selection));
  assert_param(IS_FUNCTIONAL_STATE(NewState));

  if (NewState != DISABLE)
  {

    COMP->CSR |= (uint32_t) (1<<COMP_Selection);
  }
  else
  {

    COMP->CSR &= (uint32_t)(~((uint32_t)1<<COMP_Selection));
  }
}
